# mfit

./: .gitmodules  Makefile.am  README  README.md  bootstrap  build  configure.ac
cfg/: config.xml
doc/: Makefile.am  daily.bash  daily.latex
object/: Makefile.am
src/: Config.cpp  Config.hpp  Main.cpp
src/mfit/: Engine.cpp  Engine.hpp  General.cpp  General.hpp  Module.cpp  Module.hpp  Run.cpp  Run.hpp  Statistic.cpp  Statistic.hpp  Stats.cpp  Stats.hpp
src/mfit/modules/: BodyFatPercentage.cpp  BodyFatPercentage.hpp  Calories.cpp  Calories.hpp  Cardio.cpp  Cardio.hpp  General.cpp  General.hpp  GreekIdeal.cpp  GreekIdeal.hpp  Measurements.cpp  Measurements.hpp  Run.cpp  Run.hpp  ValueString.cpp  ValueString.hpp  WeightRepSet.cpp  WeightRepSet.hpp  Weights.cpp  Weights.hpp
src/mfit/modules/weights/: Weight.cpp  Weight.hpp  WeightRepSet.cpp  WeightRepSet.hpp  Weights.cpp  Weights.hpp
test/: Makefile.am
