# Copyright (C) 2013 David 'Mokon' Bond,  All Rights Reserved

AC_INIT([Mokon Fitness],[DEV-VERSION],[mokon@mokon.net],[mfit],
        [http://mokon.net])

m4_include([mcommon/configure.m4])
m4_include([mcommon/configure_cpp.m4])

AC_REVISION([$Revision: 0.0 $])
M_COPYRIGHT_PROPRIETARY([David 'Mokon' Bond],[2013])

M_PROG_DEPS([mfit], [glog boost_system pugixml])

AC_OUTPUT

