# Copyright (C) 2013-2014 David 'Mokon' Bond, All Rights Reserved

include ../mcommon/templates/object/Makefile.am

bin_PROGRAMS = mfit

mfit_SOURCES = \
  ${SRC_DIR}/mfit/modules/General.cpp \
  ${SRC_DIR}/mfit/modules/Calories.cpp \
  ${SRC_DIR}/mfit/modules/Measurements.cpp \
  ${SRC_DIR}/mfit/modules/GreekIdeal.cpp \
  ${SRC_DIR}/mfit/modules/Cardio.cpp \
  ${SRC_DIR}/mfit/modules/BodyFatPercentage.cpp \
  ${SRC_DIR}/mfit/modules/Run.cpp \
  ${SRC_DIR}/mfit/modules/weights/Weight.cpp \
  ${SRC_DIR}/mfit/modules/weights/Weights.cpp \
  ${SRC_DIR}/mfit/modules/weights/WeightRepSet.cpp \
  ${SRC_DIR}/mfit/modules/ValueString.cpp \
  ${SRC_DIR}/mfit/Module.cpp \
  ${SRC_DIR}/mfit/Statistic.cpp \
  ${SRC_DIR}/mfit/Engine.cpp \
  ${SRC_DIR}/Main.cpp 

